Fixed style issue with header overlapping assignments

--- a/hcde598/style.css
+++ b/hcde598/style.css
@@ -40,7 +40,6 @@ li {
 .header {
   background: #fff;
   color: #000;
-  height: 500px;
   padding: 30px 30px 30px;
 }
 
